mobile fixes, contact page and order page address auto complete

--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Candy Cruffs | Freeze-Dried Candy</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Candy Cruffs | Premium Freeze-Dried Candy</title>
+  <meta name="description"
+    content="Experience the wonder of freeze-dried candy. Intense flavor, airy texture, and a crunch that melts in your mouth. Locally made in Edmonton, AB." />
+
+  <!-- Favicon (Candy Emoji) -->
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍬</text></svg>">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Candy Cruffs | Premium Freeze-Dried Candy" />
+  <meta property="og:description"
+    content="Intense flavor, airy texture, and a crunch that melts in your mouth. Locally made in Edmonton, AB." />
+  <meta property="og:image" content="/assets/logo.png" />
+  <meta property="og:url" content="https://candycruffs.ca" />
+  <meta property="og:type" content="website" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
